--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,12 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>{{ page.title }}</title>
 
-    <link rel="stylesheet" href="{{page.depth}}stylesheets/styles.css">
-    <link rel="stylesheet" href="{{page.depth}}stylesheets/pygment_trac.css">
-    <script src="{{page.depth}}javascripts/scale.fix.js"></script>
-{% for script in page.extra_scripts %}
-    <script src="{{script}}"></script>
-{% endfor %}
+    <link rel="stylesheet" href="../stylesheets/styles.css">
+    <link rel="stylesheet" href="../stylesheets/pygment_trac.css">
+    <script src="../javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
     <!--[if lt IE 9]>
@@ -21,11 +18,7 @@
     <div class="wrapper">
       <header>
         <h1>{{ page.title }}</h1>
-        <p>{{ page.tagline }}{{ tagline }}&nbsp;</p>
-        <p class="view"><a href="https://github.com/Pike/fonts">View the Project on GitHub <small>Pike/fonts</small></a></p>
-        <ul>
-          <li><a href="https://github.com/Pike/fonts">View On <strong>GitHub</strong></a></li>
-        </ul>
+        <p>{{ page.missing }} missing glyphs</p>
       </header>
       <section>
 {{ content }}
