--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,7 @@
         <h1>{{ page.title }}</h1>
         <p>{{ page.missing }} missing glyphs for {{ page.family }}</p>
       </header>
-      <section style="font-family: {{ page.family }};">
+      <section style="font-family: {{ page.family }}, UnicodeHex;">
 {{ content }}
       </section>
     </div>
